@@ -75,6 +75,7 @@ public class ReferenceTestCase extends RestletTestCase {
         ref.setSchemeSpecificPart(DEFAULT_SCHEMEPART);
         return ref;
     }
+
     /**
      * Test addition methods.
      */
@@ -218,6 +219,20 @@ public class ReferenceTestCase extends RestletTestCase {
         newForm.add("b", "2");
         newForm.add("c", "4");
         assertEquals("a=1;b=2;c=4", newForm.getMatrixString());
+    }
+
+    /**
+     * Test the computation of parent references, for absolute and relative
+     * URIs.
+     */
+    public void testParentRef() {
+        Reference baseRef = new Reference("http://test.com/foo/bar");
+        Reference parentRef = baseRef.getParentRef();
+        assertEquals("http://test.com/foo/", parentRef.toString());
+
+        baseRef = new Reference("/foo/bar");
+        parentRef = baseRef.getParentRef();
+        assertEquals("/foo/", parentRef.toString());
     }
 
     /**
@@ -630,21 +645,21 @@ public class ReferenceTestCase extends RestletTestCase {
     /**
      * Test setting of the last segment.
      */
-    public void testSetLastSegment(){
+    public void testSetLastSegment() {
         Reference ref = new Reference("http://localhost:1234");
         ref.addSegment("test");
         assertEquals("http://localhost:1234/test", ref.toString());
-        
+
         ref.setLastSegment("last");
         assertEquals("http://localhost:1234/last", ref.toString());
-        
+
         ref = new Reference("http://localhost:1234");
         ref.setLastSegment("last");
         assertEquals("http://localhost:1234/last", ref.toString());
 
         ref.setLastSegment("test");
         assertEquals("http://localhost:1234/test", ref.toString());
-        
+
         ref.addSegment("last");
         assertEquals("http://localhost:1234/test/last", ref.toString());
     }
